finished portfolio challenge

--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -7,8 +7,6 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
-    <link href="https://fonts.googleapis.com/css2?family=Square+Peg&display=swap" rel="stylesheet">
-
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/personal-portfolio.css">
@@ -16,8 +14,6 @@
     <title>Personal Portfolio</title>
 </head>
 <body>
-    <a id="button-to-top" href="#"><i class="fa-solid fa-arrow-up"></i></a>
-
     <nav id="navbar">
         <ul id="navbar-nav">
             <li><a href="#welcome-section">Welcome</a></li>
@@ -27,21 +23,53 @@
     </nav>
 
     <section id="welcome-section">
-        <h1>Hello!</h1>
+        <h1 class="heading">Hello!<br>I'm Aydin.</h1>
+
+        <h2 class="sub-heading">I'm a Backend Engineer and Student at SMK Negeri 8 Semarang.</h2>
     </section>
 
     <section id="projects">
-        <div class="project-tile">
-            <a href="https://aydinpramasta.github.io/fcc-responsive-web-design/landing-page.html" target="_blank">Landing Page Webpage</a>
+        <div class="projects-container">
+            <h2>My Projects</h2>
+
+            <a class="project-tile" href="https://aydinpramasta.github.io/fcc-responsive-web-design/personal-portfolio.html" target="_blank">
+                <img src="assets/images/portfolio_personal-portfolio.png" alt="Personal portfolio webpage project.">
+
+                <h3>Personal Portfolio</h3>
+            </a>
+
+            <a class="project-tile" href="https://aydinpramasta.github.io/fcc-responsive-web-design/technical-documentation.html" target="_blank">
+                <img src="assets/images/portfolio_technical-documentation.png" alt="Technical documentation page project.">
+
+                <h3>Technical Documentation Page</h3>
+            </a>
+
+            <a class="project-tile" href="https://aydinpramasta.github.io/fcc-responsive-web-design/landing-page.html" target="_blank">
+                <img src="assets/images/portfolio_landing-page.png" alt="Landing page project.">
+                <h3>Landing Page</h3>
+            </a>
+
+            <a class="project-tile" href="https://aydinpramasta.github.io/fcc-responsive-web-design/survey-form.html" target="_blank">
+                <img src="assets/images/portfolio_survey-form.png" alt="Survey form webpage project.">
+
+                <h3>Survey Form</h3>
+            </a>
+
+            <a class="project-tile" href="https://aydinpramasta.github.io/fcc-responsive-web-design/tribute-page.html" target="_blank">
+                <img src="assets/images/portfolio_tribute-page.png" alt="Tribute page project.">
+
+                <h3>Tribute Page</h3>
+            </a>
         </div>
     </section>
 
     <section id="profiles">
+        <h2>Let's Connect!</h2>
         <div class="socmed">
-            <a href="https://www.freecodecamp.org/aydinpramasta" id="profile-link" target="_blank">freeCodeCamp</a>
-            <a href="https://github.com/aydinpramasta" id="profile-link" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/aydinpramasta" id="profile-link" target="_blank">LinkedIn</a>
-            <a href="https://www.instagram.com/aydinpramasta" id="profile-link" target="_blank">Instagram</a>
+            <a href="https://www.freecodecamp.org/aydinpramasta" id="profile-link" target="_blank"><i class="fa-brands fa-free-code-camp"></i> freeCodeCamp</a>
+            <a href="https://github.com/aydinpramasta" id="profile-link" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a>
+            <a href="https://www.linkedin.com/in/aydinpramasta" id="profile-link" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
+            <a href="https://www.instagram.com/aydinpramasta" id="profile-link" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
         </div>
     </section>
 
